--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content=" initial-scale=1.0" />
-    <title>Select Total Search Count.</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="form-container">
-      <h2>Select Total Count.</h2>
 
-      <div class="container">
-        <label for="mobile">Mobile:</label>
-        <select id="mobile" name="mobile"></select>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content=" initial-scale=1.0" />
+  <title>Select Total Search Count.</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-      <div class="container">
-        <label for="desktop">Desktop:</label>
-        <select id="desktop" name="desktop"></select>
-      </div>
+<body>
+  <div class="form-container">
+    <h2>Select Total Count.</h2>
 
-      <div class="container">
-        <label for="desktop">Desktop:</label>
-        <input id="desktop" name="desktop"></select>
-      </div>
-      <button onclick="handleClick()">Submit</button>
+    <div class="container">
+      <label for="mobile">Mobile:</label>
+      <select id="mobile" name="mobile"></select>
     </div>
-  </body>
+
+    <div class="container">
+      <label for="desktop">Desktop:</label>
+      <select id="desktop" name="desktop"></select>
+    </div>
+
+    <div class="container">
+      <label for="mode">Mode:</label>
+      <select id="mode" name="mode"></select>
+    </div>
+
+    <div class="container">
+      <label for="user-agent">Agent:</label>
+      <input type="text" id="user-agent" name="user-agent">
+    </div>
+
+    <button id="submit-button" type="submit">Submit</button>
+  </div>
+</body>
+
 </html>
